
syntax = "proto3";

service QueryOrder {

    // hotel/adviser/pt query order
    rpc QueryOrder (QueryRequest) returns (QueryReply) {}

    // hotel/adviser query order's pt
    rpc QueryPTOfOrder (QueryPTRequest) returns (QueryPTReply) {}

}


message QueryRequest {
    string orderId = 1;
    int32 date = 2;
    int32 status = 3;
    string hotelId = 4;
    string Adviser = 5;
    string hrId = 6;
    string ptId = 7;
}


message Order {
    string orderId = 1;
    string hotelId = 2;
    string adviserId = 3;
    int32 date = 4;
    int32 duration = 5;
    int32 count = 6;
    int32 countMale = 7;
    int32 countFemale = 8;
    int32 status = 9;
    string job = 10;
    int32 mode = 11;

    repeated OrderHotelModify orderHotelModifies = 12;
    repeated OrderAdviserModify orderAdviserModifies = 13;
    repeated OrderCandidate orderCandidates = 14;
}


message OrderHotelModify {
    string id = 1;
    int32 revision = 2;
    int32 timeStamp = 3;
    int32 count = 4;
    int32 countMale = 5;
    int32 date = 6;
    int32 duration = 7;
    int32 mode = 8;
}

message OrderAdviserModify {
    string id = 1;
    int32 revision = 2;
    int32 timeStamp =3;
    int32 isFloat = 4;
    int32 hourlySalary = 5;
    string workContent = 6;
    string attention = 7;
}

message OrderCandidate {
    string id = 1;
    string adviserId = 2;
    string agentId = 3;
    string ptId = 4;
    int32 applyTime = 5;
    int32 signInTime = 6;
    int32 ptStatus = 7;
    int32 ptPerformance = 8;
    int32 objectReason = 9;
    string registrationChannel = 10;
}

message QueryReply {
    repeated Order orders = 1;
}


message QueryPTRequest {
    string orderId = 1;
    string ptId = 2;
    string registrationChannel = 3;
    int32 ptStatus = 4;
}

message PT {
        string ptId = 1;
        string adviserId = 2;
        string agentId = 3;
        int32 applyTime = 4;
        int32 signTime = 5;
        string orderId = 6;
        string id = 7;
}

message QueryPTReply {
    repeated PT orderPts = 1;
}
